# quickcheck-laws

./: quickcheck-laws.cabal  shell.nix
src/Test/QuickCheck/: Laws.hs
src/Test/QuickCheck/Control/: Applicative.hs  Monad.hs
src/Test/QuickCheck/Data/: Bounded.hs  Eq.hs  Monoid.hs  Ord.hs  Semigroup.hs
