name:                quickcheck-laws
version:             0.1.0.0
synopsis:            Library for quickchecking typeclass laws
description:         Please see README.md
homepage:            https://github.com/mckeankylej/quickcheck-laws#readme
license:             BSD3
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           2016 Kyle McKean
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Test.QuickCheck.Laws
                     , Test.QuickCheck.Data.Monoid
  build-depends:       base >= 4.7 && < 5
                     , semigroups
                     , QuickCheck
                     , text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , ScopedTypeVariables

test-suite quickcheck-laws-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mckeankylej/quickcheck-laws
